--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="radio" id="male" name="gender" value="male">Male<br><br>
         <input type="radio" id="female" name="gender" value="female">Female<br><br>
         <input type="radio" id="other" name="gender" value="other">Other<br><br>
-        <input type="submit"></input>
+        <input class="submit" id="submit" type="submit"></input>
     </form>
 </div>
 </body>
