--- a/second.html
+++ b/second.html
@@ -12,7 +12,7 @@
             if(globalsrc==undefined){
                 alert("Please select an image");
             }else{
-                document.location.href='thank_you.html?'
+                document.location.href='thank_you.html?name=' + globalsrc;
             }
         }
     </script>
